# opencv-template

./: CMakeLists.txt  Info.plist  README.md
src/: App.cpp  App.hpp  main.cpp  main.hpp
